Initial changes to use gouk-frontend

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -1,5 +1,5 @@
 <div class="global-cookie-message-dfe-sign-in" id="dsi-cookie-banner">
-    <div class="grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
+    <div class="govuk-grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
         <div class="column-two-thirds">
             <h2 class="heading-medium heading-medium--govuk">
                 Tell us whether you accept cookies
@@ -11,7 +11,7 @@
                 We use this information to improve our services
                 and to make this website work as efficently as possible.
             </p>
-            <div class="grid-row">
+            <div class="govuk-grid-row">
                 <div class="column-one-half">
                     <button class="button button--govuk cookie-accept">
                         Accept all cookies
