--- a/app/views/concepts/portal/services-v2.html
+++ b/app/views/concepts/portal/services-v2.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="column-two-thirds">
 
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Access DfE services
