--- a/app/views/journeys/invite/step3.html
+++ b/app/views/journeys/invite/step3.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step2" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Add services
@@ -10,7 +10,7 @@
     <p class="lede">Select the services the new user will be able to access and their permission levels.</p>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
 
 
