--- a/app/views/journeys/invite/step4.html
+++ b/app/views/journeys/invite/step4.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step3" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Welcome message
@@ -10,7 +10,7 @@
     <p class="lede">Add a personalised message for the new user.</p>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step5">
       <div class="form-group">
