--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-        <div class="grid-row">
+        <div class="govuk-grid-row">
             <div class="col-9">
                 <h1 class="heading-xlarge">
                   Sign in to access DfE services
