--- a/app/views/change-password-current.html
+++ b/app/views/change-password-current.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-        <div class="grid-row">
+        <div class="govuk-grid-row">
             <div class="column-two-thirds">
                 <h1 class="heading-xlarge">
                     Change password
