--- a/app/views/concepts/portal/services-v3.html
+++ b/app/views/concepts/portal/services-v3.html
@@ -5,7 +5,7 @@
 
 
 
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-9">
     <h1 class="heading-xlarge">
       Access DfE services
