--- a/app/views/concepts/portal/services.html
+++ b/app/views/concepts/portal/services.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="column-two-thirds">
     <h1 class="heading-xlarge">
       Access DfE services
     </h1>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-9">
     <h2 class="heading-medium">
       Your DfE services
