--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -30,7 +30,7 @@
     <div id="global-header-bar"></div>
 
     <main id="content" role="main" tabindex="-1">
-        <div class="grid-row">
+        <div class="govuk-grid-row">
           <div class="column-two-thirds">
             <h1 class="heading-xlarge">
               Sign in
