--- a/app/views/forgotpassword.html
+++ b/app/views/forgotpassword.html
@@ -35,7 +35,7 @@
 
         <a href="#" class="link-back">Back</a>
 
-        <div class="grid-row">
+        <div class="govuk-grid-row">
             <div class="column-two-thirds">
                 <h1 class="heading-xlarge">
                     Forgotten password
