--- a/app/views/journeys/invite/step1.html
+++ b/app/views/journeys/invite/step1.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step1" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Add a new user
@@ -10,7 +10,7 @@
     <p class="lede">Enter the user's email address</p>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step2">
       <div class="form-group">
