--- a/app/views/journeys/invite/step2-2.html
+++ b/app/views/journeys/invite/step2-2.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <a href="step5" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Edit user's details
     </h1>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step5">
       <fieldset>
