--- a/app/views/journeys/invite/step2.html
+++ b/app/views/journeys/invite/step2.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step1" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Add user's details
@@ -10,7 +10,7 @@
     <p class="lede">Provide further details for the new user.</p>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step3">
       <fieldset>
