--- a/app/views/journeys/migration/step1.html
+++ b/app/views/journeys/migration/step1.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       <span class="heading-secondary">DfE sign-in</span>
