--- a/app/views/journeys/migration/step2.html
+++ b/app/views/journeys/migration/step2.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step1" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Enter your Secure Access sign-in details
@@ -10,7 +10,7 @@
     <p class="lede">This will help us transfer your permissions from Secure Access to DfE Sign-in service.</p>
   </div>
 </div>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-6 pull-right">
     <img src="/static/images/secure-access.gif" alt="Secure access screenshot" class="responsive" />
   </div>
