--- a/app/views/journeys/migration/step3.html
+++ b/app/views/journeys/migration/step3.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="step2" class="link-back">Back</a>
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
       Are these your details?
