--- a/app/views/journeys/migration/step5.html
+++ b/app/views/journeys/migration/step5.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="grid-row">
+<div class="govuk-grid-row">
   <div class="col-12">
 
     <div class="govuk-box-highlight">
