--- a/app/views/services.html
+++ b/app/views/services.html
@@ -29,7 +29,7 @@
       <div id="global-header-bar"></div>
 
       <main class="elements-index" id="content" role="main" tabindex="-1">
-        <div class="grid-row">
+        <div class="govuk-grid-row">
           <div class="column-two-thirds">
             <h1 class="heading-xlarge">
               Services
