--- a/app/views/user-profile.html
+++ b/app/views/user-profile.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-        <div class="grid-row">
+        <div class="govuk-grid-row">
             <div class="column-two-thirds">
                 <h1 class="heading-small">
                     User profile
