--- a/src/sass/pages/_search-results.scss
+++ b/src/sass/pages/_search-results.scss
@@ -5,7 +5,7 @@ ol.search-results {
   li {
     padding: 15px;
     margin: 0;
-    border-bottom: 1px solid $grey-2;
+    border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
     &:last-child {
       border-bottom: none;
     }
@@ -25,11 +25,11 @@ ol.search-results {
       margin-bottom: 5px;
     }
     &.added {
-      background: $grey-4;
-      border: 3px solid $grey-2;
+      background: map.get($_govuk-colour-palette-legacy, "grey-4");
+      border: 3px solid map.get($_govuk-colour-palette-legacy, "grey-2");
       border-top-width: 2px;
       p {
-        border-top: 1px solid $grey-2;
+        border-top: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
         margin: 15px -15px -15px;
         font-size: 15px;
         padding: 5px 15px;
@@ -43,16 +43,16 @@ ol.search-results {
 }
 
 .filter-box {
-  background: $grey-3;
+  background: map.get($_govuk-colour-palette-legacy, "grey-3");
   margin-bottom: 15px;
-  @include media(tablet) {
+  @include govuk-media-query($until: tablet) {
     margin-bottom: 30px;
   }
   .option-select-label {
     font-weight: bold;
     font-size: 16px;
     padding: 8px 10px 6px;
-    @include media(tablet) {
+    @include govuk-media-query($until: tablet) {
       font-size: 19px;
     }
   }
@@ -65,11 +65,11 @@ ol.search-results {
     cursor: pointer;
     z-index: 100;
     padding: 0 30px 0 0;
-    background: $grey-3 url("../images/option-select-toggle-sprite.png") no-repeat right 5px;
+    background: map.get($_govuk-colour-palette-legacy, "grey-3") url("../images/option-select-toggle-sprite.png") no-repeat right 5px;
     &:hover, &:focus {
-      background-color: $grey-2;
+      background-color: map.get($_govuk-colour-palette-legacy, "grey-2");
       &+.options-container {
-        border-color: $grey-2;
+        border-color: map.get($_govuk-colour-palette-legacy, "grey-2");
       }
     }
     &.closed {
@@ -87,22 +87,22 @@ ol.search-results {
     background-color: #fff;
     overflow-y: auto;
     overflow-x: hidden;
-    border: 5px solid $grey-3;
+    border: 5px solid map.get($_govuk-colour-palette-legacy, "grey-3");
     border-top: none;
-    @include media(tablet) {
+    @include govuk-media-query($until: tablet) {
       max-height: 200px;
     }
     label {
       display: block;
       padding: 7px 7px 7px 35px;
-      border-bottom: 1px solid $grey-3;
+      border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-3");
       cursor: pointer;
       margin: 0;
-      @include media(tablet) {
+      @include govuk-media-query($until: tablet) {
         font-size: 16px;
       }
       &:hover, &:focus {
-        background: $grey-4;
+        background: map.get($_govuk-colour-palette-legacy, "grey-4");
       }
       &:last-child {
         border: none;
